--- a/core/Makefile
+++ b/core/Makefile
@@ -12,7 +12,14 @@
  PROJECT_OBJECTS  = $(addsuffix .o, $(basename ${PROJECT_SOURCES}))
  PROJECT_TARGETS  = image.elf image.bin
 
- QEMU_PATH        = /usr
+ifeq ($(OS),Windows_NT)
+	QEMU_PATH        = "/c/Program Files/qemu"
+	LINARO_PATH      = /c/gcc-linaro-7.5.0-2019.12-i686-mingw32_arm-eabi
+else
+	QEMU_PATH        = /usr/bin
+	LINARO_PATH      = /opt/software/gcc-linaro-5.1-2015.08-x86_64_arm-eabi
+endif
+
  QEMU_GDB         =        127.0.0.1:1234
  QEMU_UART        = stdio
 #QEMU_UART       += telnet:127.0.0.1:1235,server
@@ -20,7 +27,6 @@
  QEMU_DISPLAY     = -nographic -display none 
 #QEMU_DISPLAY     =            -display  sdl
 
- LINARO_PATH      = /opt/software/gcc-linaro-5.1-2015.08-x86_64_arm-eabi
  LINARO_PREFIX    = arm-eabi
 
 # part 2: build commands
@@ -42,7 +48,7 @@
 build       : ${PROJECT_TARGETS}
 
 launch-qemu : ${PROJECT_TARGETS}
-	@${QEMU_PATH}/bin/qemu-system-arm -nodefaults -M realview-pb-a8 -m 512M ${QEMU_DISPLAY} -gdb tcp:${QEMU_GDB} $(addprefix -serial , ${QEMU_UART}) -S -kernel $(filter %.bin, ${PROJECT_TARGETS})
+	@${QEMU_PATH}/qemu-system-arm -nodefaults -M realview-pb-a8 -m 512M ${QEMU_DISPLAY} -gdb tcp:${QEMU_GDB} $(addprefix -serial , ${QEMU_UART}) -S -kernel $(filter %.bin, ${PROJECT_TARGETS})
 
 launch-gdb  : ${PROJECT_TARGETS}
 	@${LINARO_PATH}/bin/${LINARO_PREFIX}-gdb -ex "file $(filter %.elf, ${PROJECT_TARGETS})" -ex "target remote ${QEMU_GDB}"
