--- a/hilevel/Cargo.toml
+++ b/hilevel/Cargo.toml
@@ -9,6 +9,8 @@ build = "build.rs"
 
 [dependencies]
 cty = "0.2.1"
+num-traits = { version = "0.2", default-features = false }
+num-derive = "0.3"
 
 [lib]
 crate-type = ["staticlib"]
