--- a/hilevel/Cargo.toml
+++ b/hilevel/Cargo.toml
@@ -11,6 +11,7 @@ build = "build.rs"
 cty = "0.2.1"
 num-traits = { version = "0.2", default-features = false }
 num-derive = "0.3"
+hashbrown = "0.7"
 
 [lib]
 crate-type = ["staticlib"]
